# CrustDB

./: .gitignore  Cargo.toml  README.md  SPEC.md  pyproject.toml
crates/crustdb_core/: Cargo.toml
crates/crustdb_core/src/: engine.rs  error.rs  lib.rs  schema.rs  value.rs
crates/crustdb_core/src/index/: disk.rs  file.rs  key.rs  manifest.rs  memory.rs  mod.rs
crates/crustdb_core/src/storage/: manifest.rs  mod.rs  record.rs  schema_file.rs  table_file.rs
crates/crustdb_py/: Cargo.toml
crates/crustdb_py/src/: lib.rs
examples/: basic.py
python/crustdb/: __init__.py  database.py  engine.py  exceptions.py  fields.py  model.py  row.py  table.py
tests/: test_engine_boundary.py  test_insert_find.py  test_model_meta.py  test_persistence.py  test_unique.py  test_update_delete.py  test_validation.py
